Updated for distribution 1.3

--- a/UPR Controller Mac/UPR Controller Mac/Base.lproj/Main.storyboard
+++ b/UPR Controller Mac/UPR Controller Mac/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="6254" systemVersion="14C81f" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
+<document type="com.apple.InterfaceBuilder3.Cocoa.Storyboard.XIB" version="3.0" toolsVersion="6751" systemVersion="14D127a" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" initialViewController="B8D-0N-5wS">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
-        <plugIn identifier="com.apple.WebKitIBPlugin" version="6254"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6751"/>
+        <plugIn identifier="com.apple.WebKitIBPlugin" version="6751"/>
     </dependencies>
     <scenes>
         <!--Application-->
@@ -841,12 +842,20 @@
                                             <rect key="frame" x="10" y="33" width="304" height="260"/>
                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                             <subviews>
-                                                <containerView translatesAutoresizingMaskIntoConstraints="NO" id="anf-xE-yg6">
+                                                <containerView hidden="YES" translatesAutoresizingMaskIntoConstraints="NO" id="anf-xE-yg6">
                                                     <rect key="frame" x="17" y="17" width="270" height="227"/>
                                                     <connections>
                                                         <segue destination="VUJ-RD-Mlc" kind="embed" id="cJJ-99-5VO"/>
                                                     </connections>
                                                 </containerView>
+                                                <textField verticalHuggingPriority="750" horizontalCompressionResistancePriority="250" fixedFrame="YES" setsMaxLayoutWidthAtFirstLayout="YES" translatesAutoresizingMaskIntoConstraints="NO" id="8cd-hu-iFH">
+                                                    <rect key="frame" x="56" y="181" width="192" height="46"/>
+                                                    <textFieldCell key="cell" controlSize="mini" sendsActionOnEndEditing="YES" alignment="center" title="QR Code Generation Coming Soon!" id="DnB-K7-HEk">
+                                                        <font key="font" metaFont="system" size="19"/>
+                                                        <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
+                                                        <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
+                                                    </textFieldCell>
+                                                </textField>
                                             </subviews>
                                             <constraints>
                                                 <constraint firstAttribute="trailing" secondItem="anf-xE-yg6" secondAttribute="trailing" constant="17" id="ONK-if-nka"/>
@@ -871,7 +880,7 @@
                                                                 <rect key="frame" x="0.0" y="0.0" width="223" height="238"/>
                                                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                                <size key="minSize" width="253" height="238"/>
+                                                                <size key="minSize" width="268" height="238"/>
                                                                 <size key="maxSize" width="463" height="10000000"/>
                                                                 <attributedString key="textStorage">
                                                                     <fragment content="Universal Presenter Remote">
@@ -921,7 +930,7 @@ Cgo
                                                                     </fragment>
                                                                 </attributedString>
                                                                 <color key="insertionPointColor" name="controlTextColor" catalog="System" colorSpace="catalog"/>
-                                                                <size key="minSize" width="253" height="238"/>
+                                                                <size key="minSize" width="268" height="238"/>
                                                                 <size key="maxSize" width="463" height="10000000"/>
                                                             </textView>
                                                         </subviews>
